handlebars and added image

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -30,10 +30,9 @@
       {{{ body }}}
     </main>
     <footer>
-      Thanks for visiting!
+      Made with ❤️ by Nou Vue
     </footer>
   </div>
-
   {{#if loggedIn}}
   <script src="/javascript/logout.js"></script>
   {{/if}}
